mobile menu spacing fixed

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,8 +25,8 @@
 .menu-icon, .menu-iconLight{
     font-size: 24px;
     position: absolute;
-    top: 5px;
-    right: 10px;
+    top: 10px;
+    right: 15px;
     color: #6b5b9f;
 }
 .menu-iconLight{
@@ -44,8 +44,8 @@
     height: 70px;
 }
 
-.toggle{
-    margin-right: 1rem;
+.toggleContainer{
+    margin-right: 2rem;
 }
 
 
@@ -60,8 +60,8 @@
     .mobile-menu{
         display: flex;
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 5px;
+        right: 5px;
     }
     .web-menu{
         display: none;
